[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/GUI/GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Cabin/Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GUI/GameOverMenu.gd" type="Script" id=3]
[ext_resource path="res://sounds/action/player_die.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Level/StaticTreeBackground.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameOverMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Background/ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ColorRect/CenterContainer"]
margin_left = 160.0
margin_top = 43.0
margin_right = 480.0
margin_bottom = 365.0
theme = ExtResource( 1 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="GridContainer" type="GridContainer" parent="Background/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 261.0
custom_constants/vseparation = 8
custom_constants/hseparation = 12
columns = 3

[node name="Blank" type="Control" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_right = 80.0
margin_bottom = 39.0

[node name="Blank2" type="Control" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_right = 188.0
margin_bottom = 39.0

[node name="Label2" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 39.0
text = "Best"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 55.0
margin_right = 80.0
margin_bottom = 95.0
rect_min_size = Vector2( 80, 40 )
text = "Time"

[node name="TimePanelContainer" type="PanelContainer" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_top = 47.0
margin_right = 188.0
margin_bottom = 103.0

[node name="TimeValue" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer/TimePanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 40 )
text = "60"
align = 1

[node name="HighTimePanelContainer" type="PanelContainer" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 47.0
margin_right = 296.0
margin_bottom = 103.0

[node name="HighTimeValue" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer/HighTimePanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 40 )
text = "60"
align = 1

[node name="ScoreLabel" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 119.0
margin_right = 80.0
margin_bottom = 159.0
rect_min_size = Vector2( 80, 40 )
text = "Score"

[node name="ScorePanelContainer" type="PanelContainer" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_top = 111.0
margin_right = 188.0
margin_bottom = 167.0

[node name="ScoreValue" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer/ScorePanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 40 )
text = "100"
align = 1

[node name="HighScorePanelContainer" type="PanelContainer" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 111.0
margin_right = 296.0
margin_bottom = 167.0

[node name="HighScoreValue" type="Label" parent="Background/ColorRect/CenterContainer/VBoxContainer/GridContainer/HighScorePanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 40 )
text = "100"
align = 1

[node name="ContinueButton" type="Button" parent="Background/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 320.0
margin_bottom = 322.0
rect_min_size = Vector2( 320, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Play Again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Background/ColorRect/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
